--- a/client/package.json
+++ b/client/package.json
@@ -11,16 +11,24 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "grommet": "^2.33.1",
+    "grommet-icons": "^4.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
+    "styled-components": "^5.3.11",
+    "typescript": "^5.1.6",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "BUILD_PATH='../server/server/static' react-scripts build",
     "test": "react-scripts test",
+    "lint": "eslint ./src/**.{js,ts,jsx,tsx,json}",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js||ts|jsx|tsx|json)\"",
+    "prettier:base": "prettier --parser typescript --single-quote",
+    "prettier:check": "yarn prettier:base --list-different \"src/**/*.{js,jsx,ts,tsx}\"",
+    "prettier:write": "yarn prettier:base --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -40,5 +48,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "eslint": "^8.47.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.2"
   }
 }
