--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -17,7 +17,7 @@ jobs:
         with:
             filters: |
               client:
-                - 'client/**.{js,jsx,ts,tsx,json}'
+                - 'client/**'
       - if: steps.changes.outputs.client == 'true'
         run: cd client && yarn && yarn lint
   lint_server:
