--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -11,6 +11,8 @@ flask = "^2.3.2"
 python-dotenv = "^1.0.0"
 requests = "^2.31.0"
 nox = "^2023.4.22"
+dacite = "^1.8.1"
+redis = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
